--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,116 @@
 .App {
   text-align: center;
+  font-family: Trebuchet MS;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.body-one{
+  background-image: url("royce-hall.png");
+  background-size: cover; 
+  max-width: 100%;
+  height: 100vh;
+  color: black;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+
+.title {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-size: 6em;
+  padding-top: 30vh;
+}
+
+.desc{
+  font-size: 2em;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.calendar{
+  margin-top: 0;
+  font-size: 2em;
+}
+
+.dates{
+  margin-top: 0;
+  margin-bottom: 70%;
+}
+
+.events{
+  font-size: 1.1em;
+}
+
+.event-title{
+  font-weight: bold;
+}
+
+h4{
+  font-size: 1.3em;
+  padding-bottom: 30px;
+}
+
+.testevent{
+  border-bottom: 2px dotted black;
+}
+
+.monday{
+  width: 18%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.tuesday{
+  width: 18%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.wednesday{
+  width: 18%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.thursday{
+  width: 18%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.friday{
+  width: 18%;
+  float: left;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.about{
+  background-image: url("haroon-rasheed.jpg");
+  background-size: cover; 
+  max-width: 100%;
+  float: bottom;
+  height: 100vh;
+}
+
+.about-title{
+  padding-top: 40%;
+  font-size: 2em;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.about-desc{
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 1.3em;
+  color: white;
 }
 
 .App-intro {
   font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
